<resources>
    <string name="app_name">fuel.me</string>
    <string name="title_activity_maps">Map</string>
    <string name="more">More</string>
    <string name="map">Go to Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="authorization">Authorization</string>
    <string name="text">Please enter your phone number and name to register</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="register">Be with us</string>
    <string name="confirmation">Confirm</string>
    <string name="confirm">Enter the code from the SMS to confirm the telephone number</string>
    <string name="code">code</string>
    <string name="next">next</string>
    <string name="go_to_map">Go to map</string>
    <string name="info">Изменить информацию</string>
    <string name="cards">Платежные карты</string>
    <string name="addCard">Добавить платежную карту</string>
    <string name="exit">Выйти</string>
    <string name="support">Служба поддержки</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="already">Already with us?</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_profile">action_profile</string>
    <string name="info_">Изменить данные</string>
    <string name="update">Обновить</string>
    <string name="surname">Фамилия</string>
    <string name="nameRu">Имя</string>
</resources>
