<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/White">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="18sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textColorHint="@color/grey"
                android:id="@+id/phone"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/Black"
                />

            <Button
                android:layout_width="175dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@color/Main"
                android:text="@string/next"
                android:id="@+id/login"
                android:textColor="@color/White" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/sign_up"
                android:id="@+id/signUp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="20dp"
            android:background="@color/White"
            android:visibility="gone"
            android:id="@+id/codeLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/confirm"
                android:gravity="center"
                android:textColor="@color/grey"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="number"
                android:hint="@string/code"
                android:id="@+id/code"
                android:background="@drawable/border"
                android:padding="15dp"
                android:layout_marginBottom="15dp" />

            <Button
                android:layout_width="175dp"
                android:layout_gravity="center"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:background="@color/Main"
                android:text="@string/next"
                android:textColor="@color/White"
                android:id="@+id/Next"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>