<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.InfoFragment"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/nameRu"
        android:padding="5dp"
        android:textSize="18sp"
        android:layout_height="match_parent" />

    <EditText
        android:textSize="16sp"
        android:id="@+id/name"
        android:layout_alignParentEnd="true"
        android:textAlignment="textEnd"
        android:background="@null"
        android:cursorVisible="true"
        android:layout_height="match_parent"
        android:layout_width="200dp"
        android:inputType="textPersonName"
        />

</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBack"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/surname"
            android:padding="5dp"
            android:textSize="18sp"
            android:layout_height="match_parent" />

        <EditText
            android:textSize="16sp"
            android:id="@+id/lastname2"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:background="@null"
            android:cursorVisible="true"
            android:layout_height="match_parent"
            android:layout_width="200dp"
            android:inputType="textPersonName"
            />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBack"/>

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/update"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_background"
        android:text="@string/update"
        android:textColor="@color/White"
        />
</LinearLayout>