<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/White"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text"
                android:gravity="center"
                android:textColor="@color/grey"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textColorHint="@color/grey"
                android:id="@+id/phone"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/Black"
                />
<!--
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textAutoComplete"
                android:hint="@string/first_name"
                android:textColorHint="@color/grey"
                android:id="@+id/firstName"
                android:background="@drawable/border"
                android:padding="15dp"
                android:textColor="@color/Black"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textAutoComplete"
                android:hint="@string/last_name"
                android:textColorHint="@color/grey"
                android:id="@+id/lastName"
                android:background="@drawable/border"
                android:padding="15dp"
                android:textColor="@color/Black"/>
-->
            <Button
                android:layout_width="175dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:id="@+id/register"
                android:textColor="@color/White" />
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/already"
                android:id="@+id/login"/>
                -->


        </LinearLayout>

    </LinearLayout>

</ScrollView>